--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
           </div>
           <div class="text-container">
             <p>
+              Hi there! I'm a Computer Engineering student at Advanced College of Engineering, 
+              currently diving deep into the exciting world of technology.I love the challenge of 
+              solving complex problems through creative coding. I'm always looking for new projects 
+              to work on and opportunities to collaborate with other talented individuals. Feel free to
+              explore my portfolio and get in touch! 
               
               
             </p>
